# DataCollaborationAnalysis

./: README.md  main.py  pyproject.toml
config/: exp001.yaml
input/: osushi.csv
output/exp001/: test.csv  train.csv
src/: data_collaboration.py  load_data.py  model.py  train_val.py
